# kquarium

./: README.md  build.gradle  libcsynth.def  ncurses.def
art/: fishfour.txt  fishone.txt  fishthree.txt  fishtwo.txt  seademon.txt
gradle/wrapper/: gradle-wrapper.properties
src/libs/csynth/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  csynth.c  csynth.cbp  csynth.h  csynthx
src/libs/ncurses-5.9/: Makefile  config.status  edit_man.sh  headers.sh
src/libs/ncurses-5.9/Ada95/src/: Makefile
src/libs/ncurses-5.9/c++/: Makefile  etip.h
src/libs/ncurses-5.9/form/: Makefile
src/libs/ncurses-5.9/include/: MKterm.h.awk  Makefile  curses.h  curses.head  ncurses_cfg.h  term.h
src/libs/ncurses-5.9/lib/: libformw.6.dylib  libmenuw.6.dylib  libpanelw.6.dylib
src/libs/ncurses-5.9/man/: Makefile  ncurses5-config.1  ncursesw6-config.1  terminfo.5
src/libs/ncurses-5.9/menu/: Makefile
src/libs/ncurses-5.9/misc/: Makefile  ncurses-config  run_tic.sh
src/libs/ncurses-5.9/ncurses/: Makefile  expanded.c  lib_gen.c  link_test.c  make_hash  make_keys
src/libs/ncurses-5.9/ncurses/base/: MKlib_gen.sh  lib_newwin.c
src/libs/ncurses-5.9/panel/: Makefile
src/libs/ncurses-5.9/progs/: Makefile  clear  infocmp  tabs  tic  toe  tput  tset
src/libs/ncurses-5.9/test/: Makefile
src/main/kotlin/: Fish.kt  NcursesExt.kt  Readfile.kt  main.kt
