cmake_minimum_required(VERSION 3.12)
project(csynth C)
set( SOURCE_FILES csynth.c)
add_library(csynth STATIC ${SOURCE_FILES})
set(CMAKE_C_STANDARD 99)
find_library(libportaudio portaudio)
target_link_libraries(csynth portaudio)
find_library(libdispatch libdispatch)
target_link_libraries(csynth libdispatch)
#add_executable (csynthx ${SOURCE_FILES})
#target_link_libraries(csynthx portaudio)
